# chem_project

./: .gitignore  0.get_firstcol.py  1.test_whole_pipeline_eng.py  1.test_whole_pipeline_m.py  2.no_rdkit_batch_test_eng.py  3.full_mol_run_ver2.py  LICENSE  README.md  check_keyvalue.py  json_check.ipynb  main.py  pyproject.toml  rdkit_test.py
BACE-1_dataset/: bace_Canvas_additional.csv  bace_Canvas_additional.mat  bace_Canvas_physiochemical.mat  bace_Canvas_topological.mat  bace_Molconn-Z_Estate_Averages.csv  bace_Molconn-Z_Estate_counts.csv  bace_Molconn-Z_Estate_keys.csv  bace_Molconn-Z_Estate_sums.csv  bace_Molconn-Z_Estate_sums.mat  bace_PipeLinePilot_descriptors.csv  bace_PipeLinePilot_descriptors.mat  bace_RDkit_fun_groups.csv  bace_RDkit_fun_groups.mat  bace_functional_group_counting.csv  bace_functional_group_counting.mat  bace_rdkit_molsurf.csv  bace_rdkit_molsurf.csv:Zone.Identifier  bace_rdkit_molsurf.mat  bace_sum_over_bonds.csv  bace_sum_over_bonds.mat  bace_target_IC50.csv  first_col.csv
chembret_cluster/: 0.run_chembreta_parallel.py  1.combine_chembreta.py  bace_smiles_to_chembreta_embeddings.py  chembret_test.py  merge_bace_embeddings.py  parallel_chemberta.sh
combine_structual_texual/: combine_embeddings.py  note.md
llama/: 0.run_llama_parallel.py  1.combine.py  2.embedding.py  3.run_chembret.py  chembret_test.py  temp_submit_embedding.sh  test_llama.py
llama_cluster/: 0.run_llama_parallel.py  1.combine.py  3.run_chembret.py  combine_backup.py  job_array.sh  parallel_combine.py  run_llama_full.py  run_llama_rescue.py  submit_llama.sh  (+1 more)
(+40 files in other folders)
