[project]
name = "chem-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "rdkit>=2025.9.4",
    "requests>=2.32.5",
    "transformers>=4.40.0",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.3",
]
